[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "divisas-lat"
version = "1.0.0"
authors = [
  { name="Divisas.lat", email="hello@divisas.lat" },
]
description = "Official Python SDK for the Divisas.lat API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20.0",
    "pytest-asyncio>=0.21.0"
]

[project.urls]
"Homepage" = "https://github.com/divisas-lat/python-sdk"
"Bug Tracker" = "https://github.com/divisas-lat/python-sdk/issues"

[project.scripts]
divisas = "divisas_lat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"
